:memo: Parallel GC